# raw-package-manager

./: Cargo.toml  release.sh
src/: cli.rs  config.rs  data.rs  error.rs  github.rs  main.rs  package.rs  state.rs
src/templates/: build.sh
